Add player input buttons to html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <script type="text/javascript" src="rps.js"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="controls">
+      <button class="controls__input">Rock</button>
+      <button class="controls__input">Paper</button>
+      <button class="controls__input">Scissors</button>
+    </div>
+  </body>
 </html>
