--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       <button class="controls__input">Paper</button>
       <button class="controls__input">Scissors</button>
     </div>
+
+    <div class="results"></div>
   </body>
 </html>
