Add more UI elements to results

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <button class="controls__input">Scissors</button>
     </div>
 
-    <div class="results"></div>
+    <div class="results">
+      <div class="results__player"></div>
+      <div class="results__round"></div>
+      <div class="results__computer"></div>
+    </div>
   </body>
 </html>
