Expand result UI
More clearly distinguished between UI elements.

Added tracking of total game score.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
       <button class="controls__input">Scissors</button>
     </div>
 
-    <div class="results">
-      <div class="results__player"></div>
-      <div class="results__round"></div>
-      <div class="results__computer"></div>
+    <div>
+      <div class="round">
+        <div class="round__player">
+          <div class="round__player__title">Player:</div>
+          <div class="round__player__result"></div>
+        </div>
+        <div class="round__winner"></div>
+        <div class="round__computer">
+          <div class="round__computer__title">Computer:</div>
+          <div class="round__computer__result"></div>
+        </div>
+      </div>
+
+      <div class="game">
+        <div class="game__player">
+          <div class="game__player__title">Player:</div>
+          <div class="game__player__result"></div>
+        </div>
+        <div class="game__winner"></div>
+        <div class="game__computer">
+          <div class="game__computer__title">Computer:</div>
+          <div class="game__computer__result"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
